--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,24 @@
 Package: modelLong
 Type: Package
 Title: Model and visualize longitudinal data
-Version: 0.1.0
+Version: 1.0
 Author: Alejandro Dionicio Hernandez
 Maintainer: Alejandro Dionicio Hernandez <alejh@uw.edu>
 Description: Package for easy fitting of linear mixed-effects models (LMM) and generalized estimating equations (GEE) for longitudinal data. Additional functions simplify creating GGPlot objects and constructing comprehensive data summaries.  
-License: What license is it under?
+License: MIT + file LICENSE
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
 Encoding: UTF-8
-LazyData: true
+Imports:
+  gtsummary,
+  nlme,
+  geepack,
+  testthat
+Suggests: 
+  knitr,
+  rmarkdown,
+  bookdown,
+  dplyr,
+  ggplot2
+VignetteBuilder: knitr
+
