--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Model and visualize longitudinal data
 Version: 1.0
 Author: Alejandro Dionicio Hernandez
 Maintainer: Alejandro Dionicio Hernandez <alejh@uw.edu>
-Description: Package for easy fitting of linear mixed-effects models (LMM) and generalized estimating equations (GEE) for longitudinal data. Additional functions simplify creating GGPlot objects and constructing comprehensive data summaries.  
+Description: Package for easy fitting of generalized linear mixed-effects models (GLMM) and generalized estimating equations (GEE) for longitudinal data. Additional functions simplify creating ggplot objects and constructing comprehensive data summaries.  
 License: MIT + file LICENSE
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
