--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Model and visualize longitudinal data
 Version: 1.0
 Author: Alejandro Dionicio Hernandez
 Maintainer: Alejandro Dionicio Hernandez <alejh@uw.edu>
-Description: Package for easy fitting of generalized linear mixed-effects models (GLMM) and generalized estimating equations (GEE) for longitudinal data. Additional functions simplify creating ggplot objects and constructing comprehensive data summaries.  
+Description: Package for easy visualization of longitudinal data and fitting of mixed effects models and generalized estimating equations.  
 License: MIT + file LICENSE
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
@@ -13,12 +13,12 @@ Imports:
   gtsummary,
   nlme,
   geepack,
-  testthat
+  dplyr,
+  ggplot2
 Suggests: 
   knitr,
   rmarkdown,
   bookdown,
-  dplyr,
-  ggplot2
+  testthat
 VignetteBuilder: knitr
 URL: https://alejandroh3005.github.io/modelLong/
