--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,14 @@ Title: Model and visualize longitudinal data
 Version: 1.0
 Author: Alejandro Dionicio Hernandez
 Maintainer: Alejandro Dionicio Hernandez <alejh@uw.edu>
-Description: Package for easy visualization of longitudinal data and fitting of mixed effects models and generalized estimating equations.  
+Description: Package for easy visualization of longitudinal data and fitting of generalized linear mixed-effects models and generalized estimating equations.  
 License: MIT + file LICENSE
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Encoding: UTF-8
 Imports:
   gtsummary,
-  nlme,
+  lme4,
   geepack,
   dplyr,
   ggplot2
